training/services/pay-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/","nginx.ingress.kubernetes.io/ssl-redirect":"false"},"generation":3,"name":"critical-ingress","namespace":"critical-space"},"spec":{"rules":[{"http":{"paths":[{"backend":{"service":{"name":"pay-service","port":{"number":8282}}},"path":"/pay","pathType":"Prefix"}]}}]},"status":{"loadBalancer":{"ingress":[{"ip":"172.20.176.55"}]}}}
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  generation: 3
  name: critical-ingress
  namespace: critical-space
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: pay-service
            port:
              number: 8282
        path: /pay
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 172.20.176.55
